[gd_scene load_steps=3 format=3 uid="uid://dd6r04buxxtfc"]

[ext_resource type="Theme" uid="uid://dy4doi4lyieg0" path="res://resources/ui_theme.tres" id="1_m5l8t"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="2_tienc"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("2_tienc")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 45.0
grow_horizontal = 2
theme = ExtResource("1_m5l8t")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="LifeLabel" type="Label" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Life: 3"

[node name="ScoreLabel" type="Label" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Score: 0"

[node name="HighScoreLabel" type="Label" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "High Score: 0"
